demo1/kube/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo1-service
  labels:
    app: demo1-service
spec:
  type: NodePort
  ports:
  - port: 8080
    name: http
  selector:
    app: demo1-service

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo1-service-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo1-service
        version: v1
    spec:
      containers:
        - name: demo1-service
          image: hsena/istio-demo1:4.0
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo1-service-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo1-service
        version: v2
    spec:
      containers:
        - name: demo1-service
          image: hsena/istio-demo1:5.0
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo1-service-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo1-service
spec:
  hosts:
    - "*"
  gateways:
    - demo1-service-gateway
  http:
  - match:
    - uri:
      exact: /welcome
    route:
#      - destination:
#          host: demo1-service
#          port:
#            number: 8080
#          subset: v1
#        weight: 0
      - destination:
          host: demo1-service
          port:
            number: 8080
          subset: v2
#        weight: 100

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo1-service
spec:
  host: demo1-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
