demo1/kube/rollout_v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo1-service
spec:
  hosts:
    - "*"
  gateways:
    - demo1-service-gateway
  http:
    - match:
        - uri:
          exact: /welcome
      route:
        - destination:
            host: demo1-service
            port:
              number: 8080
            subset: v2
